Fix atlas scrolling on mobile

--- a/frontend/app/styles/_base.scss
+++ b/frontend/app/styles/_base.scss
@@ -12,8 +12,7 @@ html, body {
 
 #page-content > div {
 	height: 100%;
-	overflow: auto;
-	-webkit-overflow-scrolling: touch;
+	overflow: hidden;
 }
 
 @media #{$small} {
