--- a/frontend/app/styles/_modules.scss
+++ b/frontend/app/styles/_modules.scss
@@ -225,7 +225,10 @@
 }
 
 .xd-atlas > .sub-nav {
-	margin-top: 80px;
+	margin-top: 50px;
+	position: relative;
+	z-index: 1;
+	background: $body-bg;
 
 	@media #{$small} {
 		margin-top: 115px;
@@ -234,10 +237,20 @@
 
 .xd-atlas-content {
 	background: #f5f5f5 url(../images/xd-page-bg.jpg);
-	padding-top: $column-gutter;
 	padding-bottom: $column-gutter;
-	overflow: hidden;
-	position: relative;
+
+	padding-top: 100px;
+	position: absolute;
+	top: 0; left: 0;
+	width: 100%; height: 100%;
+	overflow: auto;
+	-webkit-overflow-scrolling: touch;
+
+	@media #{$small} {
+		padding-top: $column-gutter;
+		overflow: hidden;
+		position: relative;
+	}
 
 	&:after {
 		@include box-shadow($gray 0px 0px 5px);
